add code anh hưng

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./About/about.html">About</a></li>
                 <li><a href="./Services/services.html">Services</a></li>
-                <li><a href="#">Blog Posts</a></li>
+                <li><a href="./blogsport/blogsport.html">Blog Posts</a></li>
                 <li><a href="#">404 page</a></li>
                 <li><a href="#">Elements</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Landing page</a></li>
+                <li><a href="./landingPage/landingpage.html">Landing page</a></li>
               </ul>
             </nav>
           </div>
